# soccer_pl_tagging

./: .gitignore  Dockerfile  Makefile  README.md  add_id_and_format_json.py  pyproject.toml
.chglog/: config.yml
.github/workflows/: lint_and_test.yml  tag_and_deploy.yml
src/: app.py  settings.py
src/models/: soccer_text_model.py
src/utils/: data_utils.py  utils.py
